--- a/templates/index.html
+++ b/templates/index.html
@@ -1,63 +1,13 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Translator</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+{% extends "base.html" %}
 
+{% block title %}Home{% endblock %}
 
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-        <![endif]-->
+{% block menu_index %}class="active"{% endblock %}
 
-        <style type='text/css'>
-            body {
-              padding-top: 60px;
-            }
-        </style>
-    </head>
-    <body>
-
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Translator</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li><a href="/start">Start</a></li>
-                        <li><a href="/learn">Learn</a></li>
-                        <li><a href="/list">List</a></li>
-                        <li><a href="/word_case_chart">Word case chart</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="container">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">
-                Use this document as a way to quickly start any new project.<br>
-                All you get is this text and a mostly barebones HTML document.
-            </p>
-        </div>
-
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    </body>
-</html>
+{% block content %}
+    <h1>Bootstrap starter template</h1>
+    <p class="lead">
+        Use this document as a way to quickly start any new project.<br>
+        All you get is this text and a mostly barebones HTML document.
+    </p>
+{% endblock %}
