--- a/templates/add.html
+++ b/templates/add.html
@@ -8,8 +8,8 @@
     Choose Type: <br />
     {% for type in word_types %}
         <form name="hidden" action="/add/{{ type }}" method="POST">
-        <input type="hidden" name="ltt" value="{{ ltt }}">
-        <input type="hidden" name="ltl" value="{{ ltl }}">
+        <input type="hidden" name="lang_from" value="{{ lang_from }}">
+        <input type="hidden" name="lang_to" value="{{ lang_to }}">
         <input type="hidden" name="lecture" value="{{ lecture }}">
         <input type="submit" value="{{ word_types[type] }}">
         </form>
