--- a/templates/list.html
+++ b/templates/list.html
@@ -5,15 +5,14 @@
 </head>
 <body>
     <h3>Vocabulary List</h3>
-    <table border='1'>
-    {% for item in voclist %}
-        <tr>
-        {% for word in item %}
-            <td>{{ word }}</td>
+    <table border="1">
+        {% for item in voclist %}
+            <tr>
+            {% for word in item %}
+                <td>{{ word }}</td>
+            {% endfor %}
+            </tr>
         {% endfor %}
-        </tr>
-    {% endfor %}
-
     </table>
 </body>
 </html>
