--- a/templates/start.html
+++ b/templates/start.html
@@ -5,24 +5,28 @@
 </head>
 <body>
     <h3>Choose Languages</h3>
-        <form name="choose_languages" action="/add" method="POST">
-        from: <select name="ltt" size="1">
-        {% for element in languages%}
-            <option> {{ element }} </option>
-        {% endfor %}
-        </select> <br />
-        to: <select name="ltl" size="1">
-        {% for element in languages%}
-            <option> {{ element }} </option>
-        {% endfor %}
-        </select> <br />
-        Lecture: <select name="lecture" size="1">
-        {% for element in lectures%}
-            <option> {{ element }} </option>
-        {% endfor %}
-        </select> <br />
+    <form name="choose_languages" action="/add" method="POST">
+        from:
+        <select name="lang_from" size="1">
+            {% for element in languages%}
+                <option> {{ element }} </option>
+            {% endfor %}
+        </select> <br>
+        to:
+        <select name="lang_to" size="1">
+            {% for element in languages%}
+                <option> {{ element }} </option>
+            {% endfor %}
+        </select> <br>
+        Lecture:
+        <select name="lecture" size="1">
+            {% for element in lectures%}
+                <option> {{ element }} </option>
+            {% endfor %}
+        </select>
+        <br>
         <input type="submit" value="Submit">
-        </form>
-    <br />
+    </form>
+    <br>
 </body>
 </html>
